...
                  ),
                  pw.SizedBox(width: 20),
                  pw.Expanded(
                    child: pw.Column(
                      crossAxisAlignment: pw.CrossAxisAlignment.start,
                      children: [
                        pw.Text('Detail Pesanan:', style: pw.TextStyle(fontWeight: pw.FontWeight.bold, fontSize: 10)),
                        pw.Row(
                          children: [
                            pw.Text('Tanggal:', style: const pw.TextStyle(fontSize: 10)),
                            pw.Spacer(),
                            pw.Text(order.createdAt != null ? dateFormat.format(order.createdAt!) : '-', style: const pw.TextStyle(fontSize: 10)),
                          ],
...
